--- a/src/index.html
+++ b/src/index.html
@@ -37,7 +37,7 @@
           </p>
   
           <a href="../login/create-account-step-1.html">
-            <button class="text-twitter-blue border-signborder border-2  w-full px-6 py-2 flex justify-center items-center self-stretch rounded-borderr font-bold not-italic ">
+            <button class="text-tei border-signborder border-2  w-full px-6 py-2 flex justify-center items-center self-stretch rounded-borderr font-bold not-italic ">
             <span>Sign up</span>
           </button>
     
