--- a/src/composetweet.html
+++ b/src/composetweet.html
@@ -16,7 +16,7 @@
             
           </span>
   
-          <a href="../Home-feed/index.html " class="flex  py-2 px-6 bg-twitter-blue-default text-neutral-50 justify-center items-center gap-10px rounded-full text-center font-inter text-base not-italic font-bold leading-normal hover:bg-#1871CA disabled:bg-#1D9BF0 disabled:opacity-50 ">
+          <a href="userprofile.html" class="flex  py-2 px-6 bg-twitter-blue-default text-neutral-50 justify-center items-center gap-10px rounded-full text-center font-inter text-base not-italic font-bold leading-normal hover:bg-#1871CA disabled:bg-#1D9BF0 disabled:opacity-50 ">
           Post
         </a> 
       </header>
