--- a/src/home.html
+++ b/src/home.html
@@ -326,7 +326,7 @@
     
     
      <img src="../../public/images/home.svg" alt="home">
-     <a href="../User-profile/index.html">
+     <a href="userprofile.html">
      <img src="../../public/images/profile.svg" alt="profile">
     </a>
     </footer>
