--- a/src/usereditprofile.html
+++ b/src/usereditprofile.html
@@ -10,7 +10,7 @@
     <header class="w-screen bg-black  gap-5 px-5 py-5 flex justify-between sticky top-0 ">
      <!-- back button -->
         <span class="flex items-center gap-3 ">
-            <a href="../User-profile/index.html"><img class="h-6 w-6" src="../../public/images/back.svg"></a> 
+            <a href="userprofile.html"><img class="h-6 w-6" src="../../public/images/back.svg"></a> 
             <!-- Edit profile text -->
         <p class="text-base font-bold leading-normal font-inter  text-neutral-50">Edit profile</p>
           
@@ -91,7 +91,7 @@
 
   <fieldset class="flex w-full  pb-4 pt-2 px-3 group items-center gap-2.5 border-[1px] rounded-[4px] focus-within:border-twitter-blue border-neutral-500 ">
     <legend class="text-neutral-500 font-inter text-xs not-italic font-medium leading-normal group-focus-within:text-twitter-blue "> <div class="flex inline-flex py-0 px-1 ">Website</div></legend>
-    <input class=" w-full caret-#1D9BF0  bg-transparent outline-none text-neutral-50 font-inter text-base not-italic font-normal leading-normal   " type="text" placeholder="Website">
+    <input class=" w-full caret-#1D9BF0 bg-transparent outline-none text-neutral-50 font-inter text-base not-italic font-normal leading-normal   " type="text" placeholder="Website">
 <!--   
    <img class="w-6 h-6 hidden"  src="../../public/images/successtick.svg" alt=""> -->
   </fieldset> 
